# deep_learning_for_coders

./: README.md  pyproject.toml
blog/: ch_1.md  ch_2.md
src/modules/ch1/: 1_cats_and_dogs.py  2_segmentation.py  3_nlp.py  4_tabular.py
