[tool.poetry]
name = "fastai_pytorch"
version = "0.1.0"
description = "A collection of tutorials from the deep learning for coders with fastai & pytorch book"
authors = ["Chris Rudnicky <chrisrudnicky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastai = "^2.7.12"
torch = "^2.0.1"
gradio = "^3.44.4"
commit-linter = "^1.0.3"


[tool.poetry.dev-dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
